--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   cupertino_icons: ^0.1.0
   provider: ^3.0.0
+  css_colors: ^1.0.2
+  file_picker: ^1.4.0
 
 dev_dependencies:
   flutter_test:
