--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
 
   cupertino_icons: ^0.1.0
   provider: ^3.0.0
+  sqflite: any
+  path_provider: any
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
