--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,9 +16,15 @@ dependencies:
 
   cupertino_icons: ^0.1.0
   provider: ^3.0.0
-  sqflite: any
-  path_provider: any
-  intl: ^0.15.7
+  sqflite: ^1.1.7+1
+
+  intl: ^0.16.0
+
+  path_provider: ^1.4.0
+  path_provider_fde:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding/
+      path: plugins/flutter_plugins/path_provider_fde
 
 dev_dependencies:
   flutter_test:
