--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,12 +26,15 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding/
       path: plugins/flutter_plugins/path_provider_fde
 
+  json_annotation: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   storyboard: ^0.0.4
-
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 flutter:
   uses-material-design: true
